force-app/main/default/objects/Master_Payment_Schedule__c/fields/Block_Id__c.field-meta.xml
<CustomField>
    <fullName>Block_Id__c</fullName>
    <formula>Block__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Block Id</label>
    <type>Text</type>
</CustomField>