force-app/main/default/objects/Master_Payment_Schedule__c/validationRules/Due_Date_and_Completed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_and_Completed_Date</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status__c),
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    OR(
        ISBLANK(Completed_Date__c),
        ISBLANK(Due_Date__c)
    )
)</errorConditionFormula>
    <errorMessage>Please fill completed date and due date</errorMessage>
</ValidationRule>