force-app/main/default/objects/Master_Payment_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Block__c</columns>
    <columns>Payment_Percent__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>S_No__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>